# CAM

./: CMakeLists.txt
include/: EnumType.h  FileType.h  GCodeGenerator.h  Tool.h  ToolManager.h  Toolpath.h  ToolpathPlanner.h  VTKManager.h  dialogaddtool.h  mainwindow.h
src/: GCodeGenerator.cpp  ToolManager.cpp  ToolpathPlanner.cpp  VTKManager.cpp  dialogaddtool.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
ui/: dialogaddtool.ui  mainwindow.ui
